--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <title>React App</title>
+    <link rel="icon" type="image/svg" href="%PUBLIC_URL%/images/orientaucr.svg" />
+
+    <title>OrientaUCR</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
